--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Callbacks-Timing-Iterators</h1>
-    <style src='hello.js'></style>
+    <script src='hello.js'></script>
+    <script src='check-number.js'></script>
 </body>
 </html>
